--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -226,7 +226,7 @@
                             <h5 class="card-title">Sweltering heat across Asia was 45 times more likely because of climate change, study finds</h5>
                             <p class="card-text"><b>BENGALURU, India (AP)</b> — Sizzling heat across Asia and the Middle East in late April that echoed last year's destructive swelter was made 45 times more likely in some parts of the continent because of human-caused climate change, a study Tuesday found.</p>
                             <br>
-                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
+                            <a href="weatherNewsSub4.html" class="btn btn-link">Read more</a>
                             <br><br>
                             <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
                         </div>
