--- a/weatherNewsSub3.html
+++ b/weatherNewsSub3.html
@@ -260,19 +260,6 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="assets/1715726549248weather-05152024.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Sweltering heat across Asia was 45 times more likely because of climate change, study finds</h5>
-                            <p class="card-text"><b>BENGALURU, India (AP)</b> — Sizzling heat across Asia and the Middle East in late April that echoed last year's destructive swelter was made 45 times more likely in some parts of the continent because of human-caused climate change, a study Tuesday found.</p>
-                            <br>
-                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
-                            <br><br>
-                            <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
                         <img src="assets/images.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Paglabas ng mga gamo-gamo, senyales ng paparating na tag-ulan</h5>
@@ -281,6 +268,19 @@
                             <a href="weatherNewsSub1.html" class="btn btn-link">Read more</a>
                             <br><br><br>
                             <h6><span class="badge bg-danger">El Nino Effect and Updates</span></h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <img src="assets/1715726549248weather-05152024.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Sweltering heat across Asia was 45 times more likely because of climate change, study finds</h5>
+                            <p class="card-text"><b>BENGALURU, India (AP)</b> — Sizzling heat across Asia and the Middle East in late April that echoed last year's destructive swelter was made 45 times more likely in some parts of the continent because of human-caused climate change, a study Tuesday found.</p>
+                            <br>
+                            <a href="weatherNewsSub4.html" class="btn btn-link">Read more</a>
+                            <br><br>
+                            <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
                         </div>
                     </div>
                 </div>
