--- a/weatherNewsSub4.html
+++ b/weatherNewsSub4.html
@@ -207,14 +207,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="assets/1715726549248weather-05152024.jpg" class="card-img-top" alt="...">
+                        <img src="assets/pagasa.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Sweltering heat across Asia was 45 times more likely because of climate change, study finds</h5>
-                            <p class="card-text"><b>BENGALURU, India (AP)</b> — Sizzling heat across Asia and the Middle East in late April that echoed last year's destructive swelter was made 45 times more likely in some parts of the continent because of human-caused climate change, a study Tuesday found.</p>
-                            <br>
+                            <h5 class="card-title">PAGASA: 40 areas in danger level heat index on May 16</h5>
+                            <p class="card-text">Forty areas may experience a heat index at the danger level on Thursday, the state weather bureau PAGASA said. 
+                                These areas, according to PAGASA's heat index forecast issued at 5 p.m. Wednesday, are the following:</p>
+                                <br>
                             <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
                             <br><br>
-                            <h6><span class="badge bg-danger">Current Weather Issues</span></h6>
+                            <h6><span class="badge bg-danger">PAGASA Weather Forecast</span></h6>
                         </div>
                     </div>
                 </div>
