--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -253,7 +253,7 @@
                             <p class="card-text">Forty areas may experience a heat index at the danger level on Thursday, the state weather bureau PAGASA said. 
                                 These areas, according to PAGASA's heat index forecast issued at 5 p.m. Wednesday, are the following:</p>
                                 <br>
-                            <a href="latestNewsSub2.html" class="btn btn-link">Read more</a>
+                            <a href="weatherNewsSub3.html" class="btn btn-link">Read more</a>
                             <br><br>
                             <h6><span class="badge bg-danger">PAGASA Weather Forecast</span></h6>
                         </div>
