--- a/weatherNewsSub2.html
+++ b/weatherNewsSub2.html
@@ -9,6 +9,7 @@
 </head>
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Domine:wght@400..700&display=swap');
     .social-icon-container {
         justify-content: center;
         align-items: center;
