--- a/weatherNewsSub3.html
+++ b/weatherNewsSub3.html
@@ -174,6 +174,10 @@
                     <div class="card-body">
                         <img src="assets/pagasa.jpg" class="img-fluid mb-3" width="100%">
                         <div class="text">
+                            <p>Forty areas may experience a heat index at the danger level on Thursday, the state weather bureau PAGASA said. 
+
+                                advertisement
+                                These areas, according to PAGASA's heat index forecast issued at 5 p.m. Wednesday, are the following:</p>
                             <p>42°C: NAIA, Pasay City</p>
                             <p>Other Stories</p>
                             <ul>
