--- a/Weather.html
+++ b/Weather.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg navbar-expand-lg nav-color">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-expand-lg nav-color">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">La Kommunikasyon</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
