--- a/showbizNewsSub4.html
+++ b/showbizNewsSub4.html
@@ -179,10 +179,10 @@
         <div class="row">
             <div class="col-12 col-md-1">
                 <div class="social-icon-container">
-                    <p><a href="#"><i class="fab fa-facebook-f social-icon"></i></a></p>
-                    <p><a href="#"><i class="fab fa-twitter social-icon"></i></a></p>
-                    <p><a href="#"><i class="fab fa-instagram social-icon"></i></a></p>
-                    <p><a href="#"><i class="fab fa-linkedin-in social-icon"></i></a></p>
+                    <p><a href="https://web.facebook.com/"><i class="fab fa-facebook-f social-icon"></i></a></p>
+                    <p><a href="https://twitter.com/"><i class="fab fa-twitter social-icon"></i></a></p>
+                    <p><a href="https://www.instagram.com/"><i class="fab fa-instagram social-icon"></i></a></p>
+                    <p><a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in social-icon"></i></a></p>
                 </div>
             </div>
             <div class="col-12 col-md-8">
